@@ -1,9 +1,18 @@
+2009-01-03  Ulrich Drepper  <drepper@redhat.com>
+
+	* init.c (__pthread_initialize_minimal_internal): Cheat a bit by
+	only passing five parameters to FUTEX_WAIT_BITSET call.
+
+	* sysdeps/unix/sysv/linux/i386/i486/lowlevellock.S
+	(__lll_timedlock_wait): Use FUTEX_WAIT_BITSET|FUTEX_CLOCK_REALTIME
+	instead of computing relative timeout.
+
 2009-01-02  Ulrich Drepper  <drepper@redhat.com>
 
 	* init.c (__pthread_initialize_minimal_internal): Check for
 	FUTEX_CLOCK_REALTIME flag.
 	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.S (__lll_timedlock_wait):
-	Use FUTEX_WAIT_BITSET|FUTEX_CLOCK_READTIME instead of computing
+	Use FUTEX_WAIT_BITSET|FUTEX_CLOCK_REALTIME instead of computing
 	relative timeout.
 
 	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.h: Define
